[package]
name = "binmatch"
version = "1.0.4"
edition = "2021"
authors = ["DakotaGay <DakotaGay@disroot.org>"]
license = "AGPL-3.0-or-later"
description = "A simple binary pattern matching crate"
repository = "https://github.com/DakotaGay/binmatch"
readme = "README.md"
keywords = ["pattern-matching", "binary-data"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
